# yttrium

./: CMakeLists.txt  main.cpp  test.cpp  test.h  yttrium.h  yttriumGL.h
GLRenderer/: CMakeLists.txt  GLIncludes.h  GLRenderer.cpp  GLRenderer.h  GLResourceManager.cpp  GLResourceManager.h  GLShaderManager.cpp  GLShaderManager.h  GLShaderSetup.cpp  GLShaderSetup.h  GLWindow.cpp  GLWindow.h
GLRenderer/Resources/: CMakeLists.txt  GLBufferResource.cpp  GLBufferResource.h
GLRenderer/Texture/: GLTextureAtlas.cpp  GLTextureAtlas.h  GLTextureManager.cpp  GLTextureManager.h
GameLogic/: GameLogic.h
MFLoader/: CMakeLists.txt  MFLoader.cpp  MFLoader.h
Window/: CMakeLists.txt  Window.cpp  Window.h  WindowInput.h
math/: Transform.h  types.h
renderer/: CMakeLists.txt  Camera.cpp  Camera.h  RendererInterface.h  Resource.h  ResourceManager.h  Shader.h  ShaderManager.h  SimpleResourceManager.cpp  SimpleResourceManager.h
renderer/Texture/: Texture.h  TextureAtlas.h  TextureManager.h  TextureTile.h
world/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshBase.h  MeshWorldNode.h  Region.h  World.h  WorldNode.cpp  WorldNode.h  worldObject.h
